--- a/notebooks/4_Summarization_SEC.ipynb
+++ b/notebooks/4_Summarization_SEC.ipynb
@@ -127,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "TOKEN = \"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\"\n",
+        "TOKEN = \"\"\n",
         "\n",
         "MODEL_CHECKPOINT = \"t5-small\"\n",
         "\n",
